<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity"
    android:background="@color/caseblue"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/caseblue"
        android:backgroundTint="@color/shadedown"
        android:backgroundTintMode="multiply"
        >
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/menu"
            android:id="@+id/menubutton"/>
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/explore"
            android:id="@+id/exploremodebutton"/>
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/dive"
            android:id="@+id/divemodebutton"/>
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/map"
            android:id="@+id/mapmodebutton"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goldLocation"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/silverLocation"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:id="@+id/fragmentcontainer">

    </FrameLayout>

</LinearLayout>