<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:led="http://schemas.android.com/apk/LostTreasure"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiveFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="right">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air12"
                    android:textAlignment="center"/>
                <com.example.losttreasure.RedLED
                android:id="@+id/air1LED"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"

                led:ledoffcolor="#FF0000"
                led:ledoncolor="#FF3333"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money350"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air10"
                    android:textAlignment="center"/>
                <com.example.losttreasure.RedLED
                android:id="@+id/air2LED"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                led:ledoffcolor="#FF0000"
                led:ledoncolor="#FF3333"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money300"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air8"
                    android:textAlignment="center"/>
                <com.example.losttreasure.RedLED
                android:id="@+id/air3LED"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                led:ledoffcolor="#FF0000"
                led:ledoncolor="#FF3333"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money250"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air6"
                    android:textAlignment="center"/>
                <com.example.losttreasure.RedLED
                android:id="@+id/air4LED"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                led:ledoffcolor="#FF0000"
                led:ledoncolor="#FF3333"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money200"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air4"
                    android:textAlignment="center"/>
                <com.example.losttreasure.RedLED
                android:id="@+id/air5LED"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                led:ledoffcolor="#FF0000"
                led:ledoncolor="#FF3333"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money150"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air2"
                    android:textAlignment="center"/>
                <com.example.losttreasure.RedLED
                android:id="@+id/air6LED"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                led:ledoffcolor="#FF0000"
                led:ledoncolor="#FF3333"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money100"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/controlpanelbkg"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="30sp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:id="@+id/numpadinput"
                android:textColor="#FF0000"/>
            <GridLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal">
            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="1"
                android:id="@+id/numpad1"
                style="?android:buttonBarButtonStyle"
                android:background="@color/lightblue"/>
            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="2"
                android:id="@+id/numpad2"
                style="?android:buttonBarButtonStyle"
                android:background="@color/lightblue"/>
            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="3"
                android:id="@+id/numpad3"
                style="?android:buttonBarButtonStyle"
                android:background="@color/medblue"/>
            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="4"
                android:id="@+id/numpad4"
                style="?android:buttonBarButtonStyle"
                android:background="@color/lightblue"/>
            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="5"
                android:id="@+id/numpad5"
                style="?android:buttonBarButtonStyle"
                android:background="@color/lightblue"/>
            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="6"
                android:id="@+id/numpad6"
                style="?android:buttonBarButtonStyle"
                android:background="@color/medblue"/>
            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="7"
                android:id="@+id/numpad7"
                style="?android:buttonBarButtonStyle"
                android:background="@color/medblue"/>
            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="8"
                android:id="@+id/numpad8"
                style="?android:buttonBarButtonStyle"
                android:background="@color/medblue"/>
            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="9"
                android:id="@+id/numpad9"
                style="?android:buttonBarButtonStyle"
                android:background="@color/medblue"/>
        </GridLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/controlpanelbkg"
            android:layout_marginEnd="8dp">
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:text="@string/air"
                android:id="@+id/fillairbutton"
                android:background="@color/lightblue"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:text="@string/up"
                android:id="@+id/uparrowbutton"
                android:background="@color/lightblue"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:text="@string/dollarsign"
                android:id="@+id/dollarsignbutton"
                android:background="@color/medblue"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:text="@string/clear"
                android:id="@+id/diveclear"
                android:background="@color/medblue"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>